--- a/app/TEMPLATES/index.html
+++ b/app/TEMPLATES/index.html
@@ -40,7 +40,7 @@
                             <div class="label">{{a.label}}</div>
                             <h2>{{a.title}}</h2>
                             <p>{{a.description}}</p>
-                            <a href="#"><span>ver ahora</span> <i class="fa fa-angle-right"></i></a>
+                            <a href="#"><span>ver ahora11</span> <i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
                 </div>
